--- a/components/address-item/address-item.scss
+++ b/components/address-item/address-item.scss
@@ -1,6 +1,13 @@
 .flex__grow{
     flex:2 2 30%;
     margin-bottom:40px;
+    input::selection {
+         background: gold; 
+        }
+
+        img{
+            cursor: pointer;
+        }
 }
 .flexible__address{
     display:flex;
