--- a/components/switch/switch.scss
+++ b/components/switch/switch.scss
@@ -31,7 +31,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: lightgray;
   -webkit-transition: .4s;
   transition: .4s;
 
@@ -42,7 +42,7 @@
    width: 20px;
    left: 3px;
    bottom: 3px;
-   background-color: white;
+   background-color: $color__white;
    -webkit-transition: .4s;
    transition: .4s;
  border-radius: 50%;
