--- a/components/footer/Footer.scss
+++ b/components/footer/Footer.scss
@@ -70,6 +70,7 @@
         margin-bottom: 5px;
         img{
           margin-right: 10px;
+          width: 20px;
         }
         a,span{
           color: $color__menu;
