--- a/components/news_item/news-item.scss
+++ b/components/news_item/news-item.scss
@@ -40,12 +40,12 @@
 }
 @media(max-width:990px){
   .news-item{
+    width:100% !important;
     padding:18px;
     margin-right:0.375rem;
-    height:160px;
     img{
-      width:88px;
-      height:88px
+      // width:88px;
+      // height:auto;
     }
   }
 }
