--- a/components/summary/summary.scss
+++ b/components/summary/summary.scss
@@ -3,6 +3,7 @@
 
 .faq-item-contain{
   width:45%;
+  cursor: pointer;
 .faq-item{
     transition: all 1s ease;
     border: 1px solid $color__bg;
@@ -10,10 +11,10 @@
     padding: $padding_xs;
     text-align:left;
     margin-bottom: $margin-bottom;
-    box-shadow: 0px 0px 5px $color__subtitle;
+    box-shadow: 0px 0px 5px lightgrey;
     &[open] summary::after {
       transition: all 0.1s ease;
-      transform: rotate(180deg);
+      transform: rotate(0deg);
     }
 
 
@@ -35,11 +36,13 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 20px;
+        height: 15px;
         font-size: xx-large;
         position: absolute;
         right: 0px;
-        top: 0px;
+        top: calc(50% - 10px);
+        transform: rotate(180deg);
+        color:lightgray;
       }
 
     }
@@ -52,7 +55,7 @@
 }
 }
 
-@media(max-width:660px) {
+@media(max-width:996px) {
   .faq-item-contain{
     width: 100% !important;
   }
