--- a/public/assets/styles/lends.scss
+++ b/public/assets/styles/lends.scss
@@ -17,7 +17,10 @@
     }
     .mobi__lend{
         display:block !important;
-       
+        h6{
+            font-size: large;
+            margin-bottom: 10px;
+        }
         .size_btn{
             width: 100%;
         }
