--- a/components/address-item/address-item.scss
+++ b/components/address-item/address-item.scss
@@ -1,7 +1,7 @@
 .flex__grow{
     flex:2 2 30%;
     margin-bottom:40px;
-    input::selection {
+    textarea::selection {
          background: gold; 
         }
 
