--- a/components/button/_button.scss
+++ b/components/button/_button.scss
@@ -9,7 +9,7 @@ border-radius: $btn__border-radius;
 outline:none;
 border:none;
 font-weight:600;
-// width:100%;
+white-space:nowrap;
 height:36px;
 display:flex;
 justify-content: center;
