--- a/components/main/main.scss
+++ b/components/main/main.scss
@@ -1,7 +1,7 @@
 @import '../../public/assets/styles/scss/variables';
 
 .main{
-    flex-basis: 71%; 
+    width: 71%; 
     background-color: $color__white;
     border-radius: $border-radius_sm;
     height: max-content;
