--- a/public/assets/styles/globals.scss
+++ b/public/assets/styles/globals.scss
@@ -95,6 +95,10 @@
   box-shadow: inset 0 0 5px grey; 
   border-radius: 10px;
 }
+.rsr-f{
+  object-fit: cover;
+  cursor:pointer
+}
  
 /* Handle */
 // .ssc::-webkit-scrollbar-thumb {
